--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 <script>
-  liff.init({ liffId: "你的_LIFF_ID" });
+  liff.init({ liffId: "2008769825-PIs3BEGg" });
 
   function openDetail(emp, date, shift, action, reason) {
     document.getElementById("dEmp").innerText = "員工：" + emp;
